# openshock-tui-logs

./: Cargo.toml  config.toml.example
src/: api.rs  main.rs  ui.rs
