[package]
name = "openshock-logs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
jiff = { version = "0.2.18", features = ["serde"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.11", features = ["serde"] }
